--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <title>Page Title</title>
 </head>
 <body>
-  
+
 <h1>sundeep</h1>
 <p>this is a test</p>
+<img src="sunny'sresume.png" alt="resume">
 
 </body>
 </html>
