--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>sundeep</h1>
 <p>this is a test</p>
-<img src="sunny'sresume.jpg" alt="resume">
+<img src="sunnysresume.jpg" alt="resume">
 
 </body>
 </html>
