--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 
-<h1>sundeep</h1>
-<p>this is a test</p>
+<h1>Sundeep's Website</h1>
+<p>below is my resume</p>
 <img src="sunnysresume.jpg" alt="resume">
 
 </body>
 </html>
+<style media="screen">
+  body {background-color: powderblue;}
+</style>
