--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <style media="screen">
   body {background-color: white;}
 </style>
+</head>
+<body>
 
 <h1>Work</h1>
+<p><p>
 <img src="20180815_105649.jpg" alt="rajushaproductions">
