--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
 
 </body>
 </html>
-<style media="screen">
-  body {background-color: white;}
-</style>
+
 </head>
 <body>
 
 <h1>Work</h1>
 <p><p>
 <img src="20180815_105649.jpg" alt="rajushaproductions">
+
+</body>
+</html>
+
+</head>
+<body>
+
+<h1>Work</h1>
+<p><p>
+<img src="youtube views for ankhar.png" alt="shantamprojectzeemusic">
+
+</body>
