--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 </head>
 <body>
 
-<h1></h1>
-<p></p>
-
 <h1>Work2</h1>
 <p><p>
 <img src="youtube views for ankhar.png" alt="shantamprojectzeemusic">
 
 </body>
+</html>
+
+</head>
