--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-<h1>Work2</h1>
+<h1>Work 2</h1>
 <p><p>
 <img src="youtube views for ankhar.png" alt="shantamprojectzeemusic">
 
@@ -34,3 +34,11 @@
 </html>
 
 </head>
+<body>
+
+<h1>Work 3</h1>
+<p><p>
+<img src="2nd banner 1st plcement-06.jpg" alt="merabaazaar">
+
+</body>
+</html>
