--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <h1>Work 3</h1>
 <p><p>
-<img src="2nd banner 1st plcement-06.jpg" alt="merabaazaar">
+<img src="2nd banner 1st placement-06.jpg" alt="merabaazaar">
 
 </body>
 </html>
