--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="utf-8"
 <title>Page Title</title>
-</head>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+</style>
+<script src=""></script>
 <body>
+
 
 <h1>Sundeep's Website</h1>
 <p>below is my resume</p>
@@ -42,9 +47,3 @@
 
 </body>
 </html>
-
-<style>
-img {
-  width: 100%;
-}
-</style>
