--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
   <meta charset="utf-8"
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
