--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@ div {text-align: center;}
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
 <img src="sunnysresume.jpg" alt="resume">
-
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
 </body>
 </html>
 
