--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ div {text-align: center;}
 
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
 <img src="sunnysresume.jpg" alt="resume">
 <style>
 h1 {text-align: center;}
