--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 <title>Page Title</title>
 
 <body>
-  <style>
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
-</style>
 
-
+  <!-- Navigation bar with social media icons -->
+  <div class="w3-bar w3-black w3-hide-small">
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
+  </div>
+  
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
-<style>
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
-</style>
 <img src="sunnysresume.jpg" alt="resume">
 <style>
 h1 {text-align: center;}
