--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 
 <body>
 
-
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
-<img src="sunnysresume.jpg" alt="resume">
+<img src="sunnysresume.jpg" alt="resume" style="vertical-align:middle>
 
 </body>
 </html>
