--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
-<img src="sunnysresume.jpg" alt="resume" style="vertical-align:middle>
+<img src="sunnysresume.jpg" alt="resume" style="vertical-align:middle" >
 
 </body>
 </html>
