--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
-<img src="sunnysresume.jpg"class="centerImage" alt="resume">
+<img src="sunnysresume.jpg" alt="resume".center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}>
+
 
 </body>
 </html>
