--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 <title>Page Title</title>
 
 <body>
-
-<h1>Sundeep's Website</h1>
-<p style="text-align:center">below is my resume</p>
-<img src="sunnysresume.jpg" alt="resume".center {
+<style> .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}>
+}
+<style>
+<h1>Sundeep's Website</h1>
+<p style="text-align:center">below is my resume</p>
+<img src="sunnysresume.jpg" alt="resume">
 
 
 </body>
