--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <style>
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
-<img src="sunnysresume.jpg" alt="resume"> class="center"">
+<img src="sunnysresume.jpg" alt="resume"> class="center">
 
 
 </body>
