--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 <title>Page Title</title>
 
 <body>
-
-
+<style media="screen">
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+</style>
 
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
