--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 
 <body>
 </style>
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.center {display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
 }
-</style>
 
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
