--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ margin-left: auto;
 margin-right: auto;
 width: 50%;
 }
-
+</style>
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
 <img src="sunnysresume.jpg" alt="resume" class="center">
