--- a/index.html
+++ b/index.html
@@ -28,9 +28,20 @@ h1 {text-align: center;}
 </head>
 <body>
 
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
 <h1>Work</h1>
 <p><p>
-<img src="20180815_105649.jpg" alt="rajushaproductions">
+<img src="20180815_105649.jpg" alt="rajushaproductions" class="center">
 
 </body>
 </html>
