--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ h1 {text-align: center;}
 
 <h1>Sundeep's Website</h1>
 <p style="text-align:center">below is my resume</p>
-<img src="sunnysresume.jpg" alt="resume" class="center">
+<img src="sunny's resume.jpg" alt="resume" class="center">
 
 
 </body>
