--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@ h1 {text-align: center;}
 </head>
 <body>
 
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
 
 <h1>Work 2</h1>
 <p><p>
@@ -60,6 +71,18 @@ h1 {text-align: center;}
 
 </head>
 <body>
+
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
 
 <h1>Work 3</h1>
 <p><p>
