--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ h1 {text-align: center;}
 
 <h1>Work 2</h1>
 <p><p>
-<img src="youtube views for ankhar.png" alt="shantamprojectzeemusic">
+<img src="youtube views for ankhar.png" alt="shantamprojectzeemusic" class="center">
 
 </body>
 </html>
@@ -86,7 +86,7 @@ h1 {text-align: center;}
 
 <h1>Work 3</h1>
 <p><p>
-<img src="2nd banner 1st placement-06.jpg" alt="merabaazaar">
+<img src="2nd banner 1st placement-06.jpg" alt="merabaazaar" class="center">
 
 </body>
 </html>
