--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ h1 {text-align: center;}
 
 <h1>Work 3</h1>
 <p><p>
-<img src="2nd banner 1st placement-06.jpg" alt="merabaazaar" class="center">
+<img src="2nd banner 1st placement-06.png" alt="merabaazaar" class="center">
 
 </body>
 </html>
