--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="sunny's resume.jpg" alt="resume" style="width:100%;">
       </div>
 
       <div class="item">
