--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+        <img src="youtube views for ankhar.png" alt="rajushaproductions" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="ny.jpg" alt="New york" style="width:100%;">
+        <img src="man halo.jpg" alt="merabaazaar" style="width:100%;">
       </div>
     </div>
 
