--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="item">
-        <img src="man halo.jpg" alt="merabaazaar" style="width:100%;">
+        <img src="slide3.jpg" alt="merabaazaar" style="width:100%;">
       </div>
     </div>
 
