--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ h1 {text-align: center;}
 
 <h1></h1>
 <p style="text-align:center">below is my resume</p>
-<img src="sunny's resume.jpg" alt="resume" class="center">
+<img src="1streplacement.jpg" alt="1stbanner" class="center">
 
 
 </body>
