--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1 {text-align: center;}
 </style>
 
 <h1></h1>
-<p style="text-align:center">below is my resume</p>
+<p style="text-align:center"></p>
 <img src="1streplacement.jpg" alt="1stbanner" class="center">
 
 
