--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 
+  <div class="header">
+    <img src="logo-01.jpg" alt="logo" />
+    <h1>secret window</h1>
+  </div>
+
 <div class="container">
   <h2></h2>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
