--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="header">
-    <img src="logo-01.jpg" alt="logo" />
+    <img src="logo.jpg" alt="logo" />
     <h1></h1>
   </div>
 
