--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ div {
   margin-bottom: 100px;
   margin-right: 150px;
   margin-left: 80px;
-  background-color:;
+  background-color: inherit;
 }
 </style>
 </head>
