--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 div {
-  border: 1px solid black;
+  border: 0px solid null;
   margin-top: 100px;
   margin-bottom: 100px;
   margin-right: 150px;
