--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <h1></h1>
   </div>
 
+  </html>
+  <body>
+
+
 <div class="container">
   <h2></h2>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
