--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 </head>
 <body>
 
+  <style>
+  div {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
+    background-color: inherit;
+  }
+  </style>
+
   <div class="header">
     <img src="logo.jpg" alt="logo"/>
     <h1></h1>
   </div>
-
-  </html>
-  <body>
-
 
 <div class="container">
   <h2></h2>
