--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+</head>
+ <body>
+
 <style>
 div {
   margin-top: 100px;
@@ -15,7 +18,8 @@ div {
   <h1></h1>
 </div>
 
-
+</head>
+</body>
 
 <head>
   <title></title>
