--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <html>
   <h1><img src="logo.jpg" alt="logo"/></h1>
-
+  <meta content="width=device-width, initial-scale=1">
 
 
   </body>
