--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 </head>
 <body>
   <html>
-  <div class="header">
-
-  </div>
-  <h1><img src="logo.jpg" alt="logo"/></h1>
+  <div><img src="logo.jpg" alt="logo"/></
 
   </body>
   </html>
