--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 </head>
 <body>
   <html>
-  <div><img src="logo.jpg" alt="logo"/></
+  <div class="header">
+    <img src="logo.jpg" alt="logo"/></
 
   </body>
   </html>
