--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 </head>
 <body>
   <html>
-  <div class="header">
-    <img src="logo.jpg" alt="logo"/></
+  <h1><img src="logo.jpg" alt="logo"/></h1>
 
   </body>
   </html>
