--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <html>
   <div class="container"
-  <h1><img src="logo.jpg" alt="logo"/></h1>
+  <div img src="logo.jpg" alt="logo"/></
 
   </body>
   </html>
