--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 </head>
 <body>
   <html>
-  <div class="container">
-  <div img src="logo.jpg" alt="logo">
+  <div class="container"
+  <h1><img src="logo.jpg" alt="logo"/></h1>
 
   </body>
   </html>
