--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <html>
-  <h1><img src="logo.jpg" alt="logo"/ class:Left></h1>
+  <h1><img src="logo.jpg" alt="logo"/></h1>
 
   </body>
   </html>
