--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <body>
   <html>
   <h1><img src="logo.jpg" alt="logo"/></h1>
+  <div id="centeredpage">
+   <img id="logo"... />
+</div>
 
   </body>
   </html>
