--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 </head>
 <body>
   <html>
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+  
   <h1><img src="logo.jpg" alt="logo"/></h1>
-  <div id="centeredpage">
-   <img id="logo"... />
-</div>
 
   </body>
   </html>
