--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
+  <a href="logo.jpg" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
