--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">CompanyLog</a>
+  <img scr="logo.jpg" alt="CompanyLogo">
+  <a href="#default" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
@@ -84,7 +85,7 @@ body {
   h1 {text-align: center;}
   </style>
 
-  <h1><img src="logo.jpg" alt="logo"/></h1>
+  <h1><img src="logo.jpg" alt="logo"></h1>
 
   </body>
   </html>
