--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ body {
 <body>
 
 <div class="header">
-  <img scr="logo.jpg" alt="CompanyLogo">
-  <a href="#default" class="logo">CompanyLogo</a>
+  <img scr="logo.jpg" alt="CompanyLogo"
+  <a href="#default" class="logo"></a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
