--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 <body>
 
 <div class="header">
-  <img scr="logo.jpg" alt="CompanyLogo"
+  <img scr="logo.jpg" alt=""
   <a href="#default" class="logo"></a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
