--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {
   h1 {text-align: center;}
   </style>
 
-  <h1><img src="logo.jpg" alt="logo"></h1>
+  <h1><img src=></h1>
 
   </body>
   </html>
