--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ body {
 <body>
 
 <div class="header">
-  <img scr="logo.jpg" alt=""
-  <a href="#default" class="logo"></a>
+  <a href="#default" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
@@ -85,7 +84,7 @@ body {
   h1 {text-align: center;}
   </style>
 
-  <h1><img src=></h1>
+  <h1><img src="logo.jpg" alt="logo"/></h1>
 
   </body>
   </html>
