--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ body {
 <body>
 
 <div class="header">
+  <img src="logo.jpg" alt="logo"/>
   <a href="#default" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
