--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 <body>
 
 <div class="header">
-  <img src="logo.jpg" alt="logo"/>
+  <img src="logo.png" alt="logo"/>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
