--- a/index.html
+++ b/index.html
@@ -218,6 +218,78 @@ h1 {text-align: center;}
 <p><p>
 <img src="2nd banner 1st placement-06.png" alt="merabaazaar" class="center">
 
+
+</body>
+</html>
+
+
+</head>
+<body>
+
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
+
+<h1></h1>
+<p><p>
+<img src="WALLPAPER FOR PACKAGING.jpg" alt="merabaazaar" class="center">
+
+</body>
+</html>
+
+</body>
+</html>
+
+
+</head>
+<body>
+
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
+
+<h1></h1>
+<p><p>
+<img src="naturalsaphtik.jpeg" alt="merabaazaar" class="center">
+
+</body>
+</html>
+
+</head>
+<body>
+
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
+
+<h1></h1>
+<p><p>
+<img src="flyer 2.1-01.jpg" alt="merabaazaar" class="center">
+
 </body>
 </html>
 
