--- a/index.html
+++ b/index.html
@@ -295,5 +295,29 @@ h1 {text-align: center;}
 </body>
 </html>
 
+</body>
+</html>
+
+</head>
+<body>
+
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
+
+<h1></h1>
+<p><p>
+<img src="2ND TIGER EYE.jpg" alt="merabaazaar" class="center">
+
+</body>
+</html>
 <footer>
   <p>xsunnyhorizonx@gmail.com<p>
