--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ body {
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -110,6 +111,10 @@ body {
 
       <div class="item">
         <img src="slide3.jpg" alt="merabaazaar" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="Untitled-1-25.jpg" alt="merabaazaar" style="width:100%;">
       </div>
     </div>
 
