--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
       </div>
 
       <div class="item">
-        <img src="Untitled-1.jpg" alt="merabaazaar" style="width:100%;">
+        <img src="Untitled-1-01.jpg" alt="merabaazaar" style="width:100%;">
       </div>
     </div>
 
