--- a/index.html
+++ b/index.html
@@ -325,4 +325,5 @@ h1 {text-align: center;}
 </body>
 </html>
 <footer>
-  <p>xsunnyhorizonx@gmail.com<p>
+  <p>Email address
+     xsunnyhorizonx@gmail.com<p>
