--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 <body>
 
 <div class="header">
-  <img src="logo.png" alt="logo"/>
+  <img src="logosw.png" alt="logo"/>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
@@ -325,5 +325,5 @@ h1 {text-align: center;}
 </body>
 </html>
 <footer>
-  <p>Email address
+  <p>email address
      xsunnyhorizonx@gmail.com<p>
