--- a/index.html
+++ b/index.html
@@ -325,5 +325,4 @@ h1 {text-align: center;}
 </body>
 </html>
 <footer>
-  <p>email address
-     xsunnyhorizonx@gmail.com<p>
+  <p>email address<br>xsunnyhorizonx@gmail.com<p>
