--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body {
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="carousel.jpg" alt="resume" style="width:100%;">
+        <img src="carousel-01.jpg" alt="resume" style="width:100%;">
       </div>
 
       <div class="item">
