--- a/index.html
+++ b/index.html
@@ -320,4 +320,4 @@ h1 {text-align: center;}
 </body>
 </html>
 <footer>
-  <p>Email address<br>xsunnyhorizonx@gmail.com<br>7291805079<p>
+  <p>Contact info<br>Email address<br>xsunnyhorizonx@gmail.com<br>7291805079<p>
