--- a/index.html
+++ b/index.html
@@ -319,6 +319,29 @@ h1 {text-align: center;}
 
 </body>
 </html>
+
+</head>
+<body>
+
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
+
+<h1></h1>
+<p><p>
+<img src="movie poster napani.jpg" alt="AAFT" class="center">
+
+</body>
+</html>
+
 <footer>
   <p>Contact info<br>Email address<br>xsunnyhorizonx@gmail.com<br>7291805079<p>
 
