--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ body {
 </html>
 
 <footer>
-  <p>Contact info<br>Email address<br>xsunnyhorizonx@gmail.com<br>7291805079<p>
+  <p>Contact info<br>Email address<br>xsunnyhorizonx@gmail.com<br>Email address<br>7291805079<p>
 
 
 </html>
