--- a/index.html
+++ b/index.html
@@ -316,6 +316,34 @@ body {
 </body>
 </html>
 
+<h1></h1>
+<p><p>
+<img src="2ND TIGER EYE.jpg" alt="merabaazaar" class="center">
+
+</body>
+</html>
+
+</head>
+<body>
+
+  <style>
+
+  .center {display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+
+  h1 {text-align: center;}
+  </style>
+
+
+<h1></h1>
+<p><p>
+<img src="TEST_WEBPAGE_TEMPLETE.jpg" alt="Aaftclasswork" class="center">
+
+</body>
+</html>
 <footer>
   <p>Contact info<br>Email address:<br>xsunnyhorizonx@gmail.com<br>Contact phone number:<br>7291805079<p>
 
